# j-space

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
app/: server.py
experiments/: probe_demos.py  probe_modulation.py  probe_multihop.py  probe_prompts.py  smoke_test.py
jspace_repro/: core.py  demos.py  jspace.py  run_readout.py
tests/: test_export.py  test_jspace.py
viz/: app.js  build_page.py  template.html
viz/data/: capital-cn.json  fear.json  index.json  mod-arith.json  mod-topic.json  multihop-boot.json  sport.json
